log/build_2025-05-19_16-44-29/user_tools/stderr.log
  File "/home/csl/isaac_routing2_v2/install/user_tools/lib/python3.10/site-packages/user_tools/goal_select.py", line 66
    with open('ENV_FILE,'r',encoding='utf-8') as f:
                                           ^
SyntaxError: unterminated string literal (detected at line 66)

